# MOS6502

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  Makefile  README.md
.github/workflows/: build.yml
MOS6502/: CMakeLists.txt  MOS6502.cpp  MOS6502.h  MOS6502_illegal.cpp
example/: Makefile  cpu.cpp  cpu.h  main.cpp
examples/nes/: CMakeLists.txt  cpu.cpp  cpu.h  main.cpp
include/MOS6502/: MOS6502.h
src/: MOS6502.cpp  MOS6502_illegal.cpp
